Update page heading

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
     <title>JS Boilerplate</title>
   </head>
   <body>
-    <h1>Vanilla JS Boilerplate</h1>
+    <h1>Vanilla JS Project Boilerplate</h1>
   </body>
 </html>
