--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎯</text></svg>"
     />
-    <title>JS Boilerplate</title>
+    <title>TS Boilerplate</title>
   </head>
   <body>
-    <h1>Vanilla JS Project Boilerplate</h1>
+    <h1>TypeScript Project Boilerplate</h1>
   </body>
 </html>
